--- a/theme/templates/includes/article.html
+++ b/theme/templates/includes/article.html
@@ -3,10 +3,10 @@
 	<header>
 	{% if article.link %}
 		<h2 class="post-title">
-			<a href="{{ article.link }}">
-				{{ article.title }}
-			</a>
-			<span class="link-arrow">⇛</span>
+            <a href="{{ article.link }}">
+                {{ article.title }}
+            </a>
+			<span class="link-arrow">→</span>
 		</h2>
 		{% if article.subtitle %}
 		<h3 class="post-subtitle">
