--- a/theme/templates/includes/footer.html
+++ b/theme/templates/includes/footer.html
@@ -8,7 +8,7 @@
 						{# Twitter #}
 						<li>
 							<a href="{{ TWITTER_URL }}">
-								<span class="fa-stack fa-lg">
+								<span class="fa-stack fa-lg social-icon">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 								</span>
@@ -18,7 +18,7 @@
 						{# Github #}
 						<li>
 							<a href="{{ GITHUB_URL }}">
-								<span class="fa-stack fa-lg">
+								<span class="fa-stack fa-lg social-icon">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 								</span>
@@ -28,7 +28,7 @@
 						{# RSS #}
 						<li>
 							<a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}">
-								<span class="fa-stack fa-lg">
+								<span class="fa-stack fa-lg social-icon">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
 								</span>
