--- a/theme/static/less/site.less
+++ b/theme/static/less/site.less
@@ -351,7 +351,12 @@ article {
     display: inline-block;
     padding: 0.35em;
     margin: 0 0.1em 0 0.2em;
-    border: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: @brand-secondary;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
     border-radius: 0.3em;
     cursor: pointer;
     background-color: rgba(110, 110, 110, 0.2);
@@ -380,7 +385,7 @@ article {
 }
 
 .bigfoot-footnote__button.is-active {
-    background-color: #6e6e6e;
+    background-color: @brand-secondary;
     -webkit-transition-delay: 0.1s;
     transition-delay: 0.1s;
 }
@@ -436,7 +441,7 @@ article {
     background: #fafafa;
     opacity: 0;
     border-radius: 0.5em;
-    border: 1px solid #c3c3c3;
+    border: 1px solid @brand-secondary;
     -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     line-height: 0;
@@ -626,7 +631,7 @@ article {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
     background: #fafafa;
-    border: 1px solid #c3c3c3;
+    border: 1px solid @brand-secondary;
     -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     border-top-left-radius: 0;
