--- a/theme/static/less/site.less
+++ b/theme/static/less/site.less
@@ -61,7 +61,27 @@
 @brand-primary: #444;
 @brand-secondary: #D30000;
 
-@font-family-sans-serif: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    src:    url('../fonts/SourceSansPro-Light.otf.woff2') format('woff2'),
+            url('../fonts/SourceSansPro-Light.otf.woff') format('woff'),
+            url('../fonts/SourceSansPro-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-weight: 900;
+    font-style: normal;
+    font-stretch: normal;
+    src:    url('../fonts/SourceSansPro-Black.otf.woff2') format('woff2'),
+            url('../fonts/SourceSansPro-Black.otf.woff') format('woff'),
+            url('../fonts/SourceSansPro-Black.ttf') format('truetype');
+}
+
+@font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @body-bg:    @white;
 @text-color: @black;
@@ -86,11 +106,11 @@
 
 
 .font-body-regular (@size: 16px, @height: 1em) {
-    font: 300 @size/@height "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 300 @size/@height "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .font-body-bold (@size: 16px, @height: 1em) {
-    font: 900 @size/@height "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 800 @size/@height "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 // Add any inividual less files here
@@ -133,9 +153,9 @@ p {
     color: #fff;
 }
 
-// a {
-//     text-decoration: underline;
-// }
+li {
+    .font-body-regular(1.2em, 1.375em);
+}
 
 .navbar {
     margin-bottom: -50px;
