--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title_front %}{% endblock %}{% block title_seperator %} | {% endblock %}{% block title_end %}{{ SITENAME }}{% endblock title_end %}</title>
+
+    <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.net/">
+    <link rel="dns-prefetch" href="//code.jquery.com/">
+
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="{{ SITENAME }}">
     {% if article %}
